# FixedRangeFloat

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: clang-format.yml
src/: FixedRangeFloat.h  benchmark.cpp  test.cpp
